--- a/sprint1apache/www/site2/index.html
+++ b/sprint1apache/www/site2/index.html
@@ -1,10 +1,14 @@
 
 <html>
 <head>
+<style>
+.avatar{
+width: 169px;
+}
 </style>
 <body>
 <h1>Carlos Aguiar Lambea</h1>
-<img src="./avatar.jpg">
+<img class="avatar" src="./avatar.jpg">
 <p>Soy un desarrollador novato con ganas de aprender</p>
 <a href="condiciones.html" title="Condiciones">Condiciones</a>
 </body>
